--- a/crowdsource-frontend/src/main/scss/components/ideas/_idea-add.scss
+++ b/crowdsource-frontend/src/main/scss/components/ideas/_idea-add.scss
@@ -5,16 +5,19 @@
   }
 }
 
+.idea-add__title {
+  @include font-form-input;
+}
+
 .idea-add__pitch {
+  @include font-form-input;
+
   min-height: $fs-small * $lh-regular * 3.5;
   border-radius: $border-radius;
   border: 1px solid $clr-border;
   box-shadow: inset 0 1px 0 0 rgba(0, 0, 0, 0.05);
   transition: border .15s ease-in;
-  font-size: $fs-small;
-  line-height: $lh-regular;
   min-height: $fs-regular * $lh-regular * 3.5;
-
 
   &:focus {
     box-shadow: none;
